	* Windows compitable
	* Language files
	(DONE) Saving state of Showbars in config file everytime where is changed
	(DONE) oneclick document opening
	(DONE) filter separating ex.: "*.c;*.cpp;*.h"
	* fix possible memory leaks (using g_free... where is need)


+-------------------------------+
| Development release ChangeLog |
+-------------------------------+

10-04-2010 	Adrian Dimitrov 		<dimitrov.adrian@gmail.com>

	* src/treebrowser.c
		fixed wrong root refresh on delete and create when objects are in toplevel
		some string changed in prefs dialog
		added option to close document if it is deleted from treebrowser
		highlighing addressbar if typed directory not exists
		make right click menu dynamic


31-03-2010 	Adrian Dimitrov 		<dimitrov.adrian@gmail.com>

	* src/treebrowser.c
		fixed saving state of Show the toolbars when starting Geany
		moving settings saving in separated function - save_settings()
		now changing root directory when change current project
		fixed bug when 'Right click->Refresh'


30-03-2010 	Adrian Dimitrov 		<dimitrov.adrian@gmail.com>

	* src/treebrowser.c
		fixed expaned state when create/delete/remove files or directories


26-03-2010 	Adrian Dimitrov 		<dimitrov.adrian@gmail.com>

	* src/treebrowser.c
		fixed bug with 'On expand, refresh.'
		now right click not select item from list


23-03-2010 	Adrian Dimitrov 		<dimitrov.adrian@gmail.com>

	* src/treebrowser.c
		added option when expanding to refresh directory tree
		fixed complier warning with glib


22-03-2010 	Adrian Dimitrov 		<dimitrov.adrian@gmail.com>

	* src/treebrowser.c
		fixed some bugs
		fixed few old compiler warnings
		applied few patches from Enrico Troger (code improvement)


21-03-2010 	Adrian Dimitrov 		<dimitrov.adrian@gmail.com>

	* src/treebrowser.c
		fixed few compile warnings with glib and unused vars
		fixed expanding, now directory is open when it click filling for first time
		fixed possible segfault on start
		added menu option to go up